--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,3 @@
-<h1>Hi, <%= @user.email %> !</h1>
+<h1>Hi, <%= current_user.email %> , Welcome to your To-Do List!</h1>
+<%= render @items %>
+<%= render partial: 'items/form', locals: {user: @user} %>
