--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,9 @@
 <h1>Hi, <%= current_user.email %> , Welcome to Blocitoff!</h1>
-<%= render @items %>
-<%= render partial: 'items/form', locals: {user: @user} %>
+
+<%= render partial: 'items/form', locals: {user: @user, item: Item.new} %>
+
+<% @user.items.each do |item| %>
+<%= render partial: 'items/item', locals: {user: @user, item: item} %>
+<% end %>
+
 <div class='js-items-count'><%= pluralize(@user.items.count, 'item') %></div>
